# education_system

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: courses.py  generation.py  knowledge.py  materials.py  projects.py  rag.py
backend/app/assets/: importTopicTemplate.xlsx
backend/app/core/: config.py
backend/app/schemas/: ai_result.py  material.py  project.py  rag.py
backend/app/services/: ai_mock_content.py  ai_result_repository.py  bigmodel_mcp_service.py  chunking_service.py  converter.py  dashscope_service.py  exercise_generation_service.py  local_rag_service.py  local_retrieval_service.py  material_pipeline.py  material_repository.py  material_worker.py
backend/scripts/: e2e_frontend_simulation.py  test_deepseek_api.py
docs/: 01-项目概览.md  02-系统架构.md  03-快速开始.md  04-后端说明.md  05-前端说明.md  06-API清单.md  07-知识图谱导入导出规范.md  08-部署与运维.md  09-协作规范.md  10-习题生成功能更新方案.md  CHANGELOG.md  README.md  backend_e2e_report_2026-04-10_qwen35plus.md  项目设计文档.md
frontend/: README.md  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/data/: mock.ts
frontend/src/hooks/: useConversionQueue.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: CourseDetailPage.tsx  DashboardPage.tsx  KnowledgeGraphPage.tsx  ProfilePage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: llmSettings.ts
